[tool.poetry]
name = "S2CheckerBoard"
version = "0.1.0"
description = ""
authors = ["Auggie Marignier <augustin.marignier.14@ucl.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.1"
scipy = "^1.5.2"
healpy = "^1.14.0"
matplotlib = "^3.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
